// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'(1) When expressions are joined by the logical AND operator, line wrapping is supported only in the last operand.' > expectation 1`] = `
"//---------------------------------------------------------|
printWidth=60 (in snapshot)
<template>
  <div>
    <div
      :class="
        truthyExpression &&
        \`lorem ipsum dolor sit amet consectetur adipiscing
        elit proin ex massa hendrerit eu posuere\`
      "
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'(2) When expressions are joined by the logical AND operator, line wrapping is supported only in the last operand.' > expectation 1`] = `
"//---------------------------------------------------------|
printWidth=60 (in snapshot)
<template>
  <div>
    <div
      :class="
        truthyExpression &&
        'lorem ipsum dolor sit amet' !==
          'consectetur adipiscing elit proin ex massa hendrerit eu posuere' &&
        \`lorem ipsum dolor sit amet consectetur adipiscing
        elit proin ex massa hendrerit eu posuere\`
      "
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'(3) When expressions are joined by the logical AND operator, line wrapping is supported only in the last operand.' > expectation 1`] = `
"//---------------------------------------------------------|
printWidth=60 (in snapshot)
<template>
  <div>
    <div
      :class="
        truthyExpression &&
        (condition
          ? \`lorem ipsum dolor sit amet consectetur
            adipiscing elit proin ex massa hendrerit eu
            posuere\`
          : \`lorem ipsum dolor sit amet consectetur
            adipiscing elit proin ex massa hendrerit eu
            posuere\`)
      "
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'(4) When expressions are joined by the logical OR operator, line wrapping is supported only in the last operand.' > expectation 1`] = `
"//---------------------------------------------------------|
printWidth=60 (in snapshot)
<template>
  <div>
    <div
      :class="
        falsyExpression ||
        \`lorem ipsum dolor sit amet consectetur adipiscing
        elit proin ex massa hendrerit eu posuere\`
      "
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'(5) When expressions are joined by the logical OR operator, line wrapping is supported only in the last operand.' > expectation 1`] = `
"//---------------------------------------------------------|
printWidth=60 (in snapshot)
<template>
  <div>
    <div
      :class="
        falsyExpression ||
        'lorem ipsum dolor sit amet' ===
          'consectetur adipiscing elit proin ex massa hendrerit eu posuere' ||
        \`lorem ipsum dolor sit amet consectetur adipiscing
        elit proin ex massa hendrerit eu posuere\`
      "
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'(6) When expressions are joined by the logical OR operator, line wrapping is supported only in the last operand.' > expectation 1`] = `
"//---------------------------------------------------------|
printWidth=60 (in snapshot)
<template>
  <div>
    <div
      :class="
        falsyExpression ||
        (condition
          ? \`lorem ipsum dolor sit amet consectetur
            adipiscing elit proin ex massa hendrerit eu
            posuere\`
          : \`lorem ipsum dolor sit amet consectetur
            adipiscing elit proin ex massa hendrerit eu
            posuere\`)
      "
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'(7) When expressions are joined by the nullish coalescing operator, line wrapping is supported only in the last operand.' > expectation 1`] = `
"//---------------------------------------------------------|
printWidth=60 (in snapshot)
<template>
  <div>
    <div
      :class="
        null ??
        \`lorem ipsum dolor sit amet consectetur adipiscing
        elit proin ex massa hendrerit eu posuere\`
      "
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'(8) When expressions are joined by the nullish coalescing operator, line wrapping is supported only in the last operand.' > expectation 1`] = `
"//---------------------------------------------------------|
printWidth=60 (in snapshot)
<template>
  <div>
    <div
      :class="
        null ??
        void 'lorem ipsum dolor sit amet consectetur adipiscing elit proin ex massa hendrerit eu posuere' ??
        \`lorem ipsum dolor sit amet consectetur adipiscing
        elit proin ex massa hendrerit eu posuere\`
      "
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'(9) When expressions are joined by the nullish coalescing operator, line wrapping is supported only in the last operand.' > expectation 1`] = `
"//---------------------------------------------------------|
printWidth=60 (in snapshot)
<template>
  <div>
    <div
      :class="
        null ??
        (condition
          ? \`lorem ipsum dolor sit amet consectetur
            adipiscing elit proin ex massa hendrerit eu
            posuere\`
          : \`lorem ipsum dolor sit amet consectetur
            adipiscing elit proin ex massa hendrerit eu
            posuere\`)
      "
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;
